test: Create RepositoriesTest